# FocusStacking

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  entrypoint.sh
config/: default.yaml
include/align/: align_strategy.hpp  ecc_align.hpp  feature_align.hpp
include/core/: pipeline.hpp  types.hpp
include/stack/: laplacian_pyr.hpp  naive_log.hpp  stack_strategy.hpp
include/utils/: io.hpp  logger.hpp
src/: main.cpp
src/align/: ecc_align.cpp  feature_align.cpp
src/core/: pipeline.cpp
src/stack/: laplacian_pyr.cpp  naive_log.cpp
src/utils/: io.cpp  logger.cpp
